# OpenGL-ShaderArt

./: CMakeLists.txt  README.md
Includes/: Hello_Triangle_App.h
Includes/glad/: glad.h
Shaders/: Fragment.glsl  Vertex.glsl
Sources/: Hello_Triangle_App.cpp  glad.c  main.cpp
